# Acoustic_Vibrations_Solver

./: BoundedFunction.cpp  BoundedFunction.h  CMakeLists.txt  Function.h  FunctionProduct.cpp  FunctionProduct.h  README.md  SineFunction.cpp  SineFunction.h  function_util.cpp  function_util.h  main.cpp  main_calculations.cpp  main_calculations.h
Functions/: BSplineDerivative.cpp  BSplineDerivative.h  BSplineFunction.cpp  BSplineFunction.h  FunctionCombination.cpp  FunctionCombination.h
